# egamma-tnp

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Combine_fits.py  DPNote_EGM_2023.ipynb  Dockerfile  EGM_HLT_STEAM_20October2023.ipynb  EgammaTnP.ipynb  LICENSE  README.md  Run3Winter24.ipynb  check_filters_2024.ipynb  check_mc_filters_2024.ipynb  compare_ntuple_to_nanoaod.ipynb  data_vs_mc.ipynb  debug_dask_histogram.ipynb  debug_random_bin_contents.ipynb  ntuple_efficiency.ipynb  plotting.ipynb  pyproject.toml  run.py  run_loop.py  run_mc.ipynb  setup.sh  setup_local.sh  setup_lpcjobqueue.sh  steam_august_2024.ipynb  steam_july_2024.ipynb  steam_june_2024.ipynb  steam_may_2024.ipynb  sz.py  test_fitting_mine.py  try_roofit.ipynb  try_zfit.ipynb  utils.py
.github/workflows/: ci.yml  pr.yml
egamma_tnp/: __init__.py  config.py  tnp.py  utils.py
examples/SaS_ntuples/: README.md  config.json  download_jsons.sh  fileset.json  input24.yaml  inputDAS.yaml
examples/SaS_ntuples/Run3_NanoV15/: input24.json  input24.yaml
examples/commissioning_ntuples/: README.md  config.json  config1.json  config2.json  settings.json
examples/fetch_dataset/: README.md  input.txt  input.yaml  inputYAML.yaml
examples/fitter/: README.md  config.json
examples/fitter_examples/: README.md  config_example.json
examples/nanoaod_filters/: README.md  config.json  config1.json  config2.json
examples/nanoaod_filters_custom/: README.md  binning.json  config.json  fileset.json  settings.json
examples/ntuples_filters/: README.md  config.json  config_1d.json  config_nd.json  fileset.json  runfilter.py  settings.json
examples/steam_workflow/: steam_september_2024.ipynb  steam_september_2024.json
json/: Cert_Collisions2022_355100_362760_Golden.json  Cert_Collisions2023_366442_368823_Golden.json  Cert_Collisions2023_366442_370790_Golden.json
notebooks/: current_status.ipynb  egamma_meeting.ipynb  egamma_meeting_Apr_22_2024.ipynb  egamma_meeting_May_6_2024.ipynb  egamma_meeting_old.ipynb  tutorial.ipynb
scripts/: dataset_query.py  fetch_datasets.py  get_unprocessed_partitions.py  merge_parquet.py  run_analysis.py
src/egamma_tnp/: __init__.py  _base_ntuplizer.py  _base_tagnprobe.py  _tnpmodules.py  _version.py  commissioning.py  config.json  config.py  nanoaod_efficiency.py  nanoaod_sas_ntuple.py  nanoaod_sas_ntuples.py  ntuple_efficiency.py  plot.py  tnp.py  triggers.py  utils.py  version.py
src/egamma_tnp/config/: __init__.py  binning.py  config.json  config_example.json  default_binning.json  default_commissioning_settings.json  default_config.json  manager.py
src/egamma_tnp/fitter/: basepdf.py  fit.py  models.py  utils.py
src/egamma_tnp/scripts/: dataset_query.py  fetch_datasets.py  fitter.py  merge_parquet.py  prepare_histograms.py  run_analysis.py  run_fitter.py
src/egamma_tnp/triggers/: __init__.py  basedoubleelectrontrigger.py  basesingleelectrontrigger.py  basetnp.py  basetrigger.py  doubleelept_caloidl_mw.py  elept1_elept2_caloidl_trackidl_isovl.py  elept_caloidvt_gsftrkidt.py  elept_wptight_gsf.py  ntuple_efficiency.py
src/egamma_tnp/utils/: __init__.py  dataset.py  default_runner_settings.json  fit_function.py  fitter_models.py  fitter_plot_model.py  fitter_sh.py  fitter_shapes.py  fitter_utils.py  histogramming.py  logger_utils.py  logger_utils_fit.py  misc.py  pileup.py  rucio.py  rucio_utils.py  runner_utils.py
tests/: dummy_sas_ntuplizer.py  dummy_tag_and_probe_nanoaod.py  dummy_tag_and_probe_ntuples.py  example_binning.json  example_commissioning_fileset.json  example_commissioning_fileset_2024F.json  example_commissioning_fileset_less.json  example_extra_filter.py  example_fileset.json  example_runner.json  example_settings.json  test_cli.py  test_doubleelept_caloidl_mw_nanoaod.py  test_doubleelept_caloidl_mw_ntuples.py  test_elept1_elept2_caloidl_trackidl_isovl.py  test_elept1_elept2_caloidl_trackidl_isovl_nanoaod.py  test_elept1_elept2_caloidl_trackidl_isovl_ntuples.py  test_elept_caloidvt_gsftrkidt.py  test_elept_caloidvt_gsftrkidt_nanoaod.py  test_elept_caloidvt_gsftrkidt_ntuples.py  test_elept_wptight_gsf.py  test_elept_wptight_gsf_nanoaod.py  test_elept_wptight_gsf_ntuples.py  test_fitter_histogram_conversion.py  test_get_unprocessed_partitions.py  test_histogramming_funcs.py  test_histogramming_nanoaod.py  test_histogramming_ntuples.py  test_pileup.py  test_sas_ntuples_nanoaod.py  test_tag_and_probe_nanoaod.py  test_tag_and_probe_ntuples.py  test_tnp.py
tests/samples/: DYto2E.root  NanoNTuples.root  NanoNTuples_el.root  NanoNTuples_ph.root  TnPNTuples.root  TnPNTuples_el.root  TnPNTuples_ph.root  fitter_bining.pkl  test_pu_correction.json
