[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "egamma-tnp"
description = "E/Gamma HLT efficiency from NanoAOD using Tag and Probe."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
authors = [
  { name = "Iason Krommydas", email = "ik23@rice.edu" },
]
maintainers = [
    { name = "Iason Krommydas", email = "ik23@rice.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "coffea[dask,rucio]>=2023.12.0",
  "mplhep>=0.3.29",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/iasonkrom/egamma-tnp"
"Bug Tracker" = "https://github.com/iasonkrom/egamma-tnp/issues"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "black[jupyter]",
  "ruff",
  "pytest",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/egamma_tnp/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "-rfesxX",
  "-v",
]
log_cli_level = "DEBUG"
filterwarnings = [
  "ignore:There is no current event loop",
]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
ignore = ["F403", "F405", "E402"]
